2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-frontend"
  namespace: "2048-game" 
spec:
  ports:
      protocol: TCP
      port: 80
      targetPort: 80
    type: ClusterIP
    selector:
      app: "frontend"
